fix white space in file name

--- a/themes/vitinhgiatot/assets/css/responsive.css
+++ b/themes/vitinhgiatot/assets/css/responsive.css
@@ -291,13 +291,17 @@
 .cart_buttons span {display: block;padding: 5px 0;}
 
     .nivoSlider{
-        height: 300px;
+        height: auto;
         position: relative;
     }
     .nivo-caption{
+        position: static;
         bottom: 0;
         width: 100%;
         padding: 5px;
+    }
+    .nivo-caption h2{
+        padding-top: 10px;
     }
     .nivo-caption h3{
         line-height: 44px;
@@ -337,6 +341,7 @@
 
 .header_cart b,
 .header_cart span.cart-total-items {display: none;}
+    #main_content .product{overflow: visible}
     #main_content .product .product_img{
         float: none;
         margin: 0 0 10px;
